fix nav height consistency on mobile browsers after scrolling

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -11,10 +11,6 @@
   z-index: 999;
   backdrop-filter: blur(10px);
 
-  // &.scroll {
-  //   background-color: hsla(230, 50%, 12%, 0.7);
-  // }
-
   @media (min-width: 900px) {
     left: 0;
     height: 100vh;
@@ -51,7 +47,7 @@
   gap: 1rem;
   width: 50%;
   // height: calc(100svh - var(--nav-height));
-  height: 100svh;
+  height: 100vh;
   background-color: var(--nav-background-color-dark);
   z-index: -1;
 
